<resources>
    <string name="app_name">地图画编辑器</string>
    <string name="add_pic">生成地图画</string>
    <string name="proportional_scaling">等比缩放</string>
    <string name="proportional_complete">完整切割</string>
    <string name="introduce">使用方法：\n\n1.点击“+”图标选择图片，图片大小会自动调整。\n\n2.背包格子：指物品将会生成到玩家背包的哪个格子里（编号从0到35），每次生成完后，编号自动增1\n\n3.点击按钮生成地图画，默认会在玩家背包的第一个格子生成一个地图物品，如果此格子中有物品，则会覆盖掉此物品，还请注意。\n\n4.软件内显示的缩略图并不代表实际地图画效果。实际效果还请打开游戏查看。\n\n5.生成地图过程中请勿终止软件运行！！！这非常重要！！！意外的终止可能会导致世界损坏！！！\n\n</string>
    <string name="menu_about">关于</string>
    <string name="help">帮助</string>
    <string name="empower">导入游戏内地图</string>
    <string name="delete_map">删除应用内地图</string>
    <string name="refresh">刷新地图列表</string>
    <string name="select">选择你想使用的生成方式</string>
    <string name="button_normal">普通模式（生成单张地图）</string>
    <string name="button_grid">网格切分模式（图片切分为多张地图）</string>
    <string name="menu_about_message">作者：创造者MC\n参与者：GaoZaiCi\n应用图标设计：柠檬龙\n工作室：我的世界魔灵工作室\n软件版本：1.2.0\n支持版本：基岩版\n\n软件下载：\n<a href="https://creatormc.lanzoul.com/b01vahqub"><font fgcolor="#ff0000ff">https://creatormc.lanzoul.com/b01vahqub</font></a>\n密码：tms\n\n联系作者：\n<a href="https://space.bilibili.com/152404569"><font fgcolor="#ff0000ff">Bilibili</font></a>\n\n免责声明：\n因用户使用不当所造成的任何后果与本软件开发者及其所属工作室无关。应由用户自行承担相关责任。（温馨提示：禁止利用本软件传播违法违规内容！）\n此应用程序与Minecraft、Mojang AB或Microsoft无关，也与我的世界、网易无关。此应用不是一个官方应用，只是一个由玩家制作的APP。\n【这不是一个官方的Minecraft（我的世界）产品】\n【该APP“按原样”提供，不提供任何形式的保证。】\n\n本软件github仓库：\n<a href="https://github.com/CreatorMC/MapPaintingEditor"><font fgcolor="#ff0000ff">MapPaintingEditor</font></a>\n\n使用的库：\n<a href="https://github.com/mithrilmania/android-leveldb"><font fgcolor="#ff0000ff">android-leveldb</font></a>\n<a href="https://github.com/Mojang/leveldb-mcpe"><font fgcolor="#ff0000ff">leveldb-mcpe</font></a>\n<a href="https://github.com/oO0oO0oO0o0o00/blocktopograph"><font fgcolor="#ff0000ff">blocktopograph</font></a>\n<a href="https://github.com/guolindev/PermissionX"><font fgcolor="#ff0000ff">PermissionX</font></a>
    </string>
    <string name="row">行数</string>
    <string name="col">列数</string>
    <string name="intelligent_identification">智能分析</string>
    <string name="state">状态：</string>
    <string name="cell">背包格子：</string>
    <string-array name="spinner_data">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
    </string-array>
    <string name="introduce_grid">使用方法：\n\n1.点击“+”图标选择图片。\n\n2.完整切割：勾选此项后，生成的地图画不会有多余的空白像素，但图片可能会被拉伸。\n\n3.行：要把图片切分成几行，列：要把图片切分成几列。\n（注意：行列相乘应不超过36，否则无法生成）\n\n4.智能分析：尽量在不缩放图片的情况下提供切分的最佳行列选项。\n\n5.点击“生成地图画”按钮即可把得到的地图都放入玩家背包中，已存在的物品会被覆盖，还请注意。\n\n6.软件内显示的缩略图并不代表实际地图画效果。实际效果还请打开游戏查看。\n\n7.生成地图过程中请勿终止软件运行！！！这非常重要！！！意外的终止可能会导致世界损坏！！！\n\n</string>
</resources>
